# hacs-ai-toolset

./: .gitignore  AGENTS.md  CI_FIX_SUMMARY.md  IMPLEMENTATION.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements_dev.txt  requirements_test.txt
.github/workflows/: lint.yml  release.yml  test.yml  version-bump.yml
custom_components/ai_toolset/: __init__.py  config_flow.py  const.py  manifest.json  strings.json
custom_components/ai_toolset/tools/: __init__.py  calendar.py  code_executor.py  create_automation.py  music.py  url_fetch.py  waze_travel_time.py  web_search.py
custom_components/ai_toolset/translations/: en.json
tests/: conftest.py  test_config_flow.py  test_init.py
tests/tools/: test_calendar.py  test_code_executor.py  test_create_automation.py  test_music.py  test_url_fetch.py  test_waze_travel_time.py  test_web_search.py
